# BikeDashcamAI

./: .gitignore  DEVELOPMENT.md  README.md  README_EN.md  dev_plan.markdown  project.yml  pyproject.toml  pytest.ini
BikeDashcamAI/: AIAnalyzer.swift  ContentView.swift  Info.plist  VideoCaptureManager.swift  VideoProcessor.swift
BikeDashcamAI.xcodeproj/: project.pbxproj
BikeDashcamAI.xcodeproj/project.xcworkspace/xcuserdata/mac.xcuserdatad/: UserInterfaceState.xcuserstate
BikeDashcamAI.xcodeproj/xcuserdata/mac.xcuserdatad/xcschemes/: xcschememanagement.plist
BikeDashcamAI/Resources/: Info.plist  LaunchScreen.storyboard
BikeDashcamAI/Sources/App/: SceneDelegate.swift
BikeDashcamAI/Sources/Services/: CameraManager.swift  RecordingCoordinator.swift  SensorDataCollector.swift  SimpleCameraManager.swift  VideoEncoder.swift
BikeDashcamAI/Sources/ViewControllers/: MainViewController.swift
backend/: Dockerfile  README.md  requirements.txt  simple_main.py
backend/app/: main.py
backend/app/api/: websocket.py
backend/app/services/: scene_detector.py  video_processor.py
engine/: .env.example  .gitignore  DESIGN.md  Dockerfile.api  QUICKSTART.md  README.md  docker-compose.yml  requirements.txt
engine/api/: main.py  schemas.py
engine/api/routers/: index.py  search.py
engine/evaluation/: evaluate.py  metrics.py  test_queries.json
engine/milvus/: collection.py  connection.py  search.py
engine/models/fusion/: fusion.py
engine/models/siglip/: export.py
engine/models/timesformer/: export.py
engine/scripts/: extract_frames.py
engine/triton/models/fusion/: config.pbtxt
engine/triton/models/siglip/: config.pbtxt
engine/triton/models/timesformer/: config.pbtxt
frontend/: App.tsx  README.md  package.json
frontend/src/components/: CameraView.tsx  VideoStreamer.tsx
frontend/src/services/: websocket.ts
frontend/src/types/: video.ts
k8s/: README.md  backend-config.yaml  backend-deployment-namespace.yaml  backend-deployment-test.yaml  backend-deployment.yaml
scripts/: deploy-backend.sh  dev.py  run_test.py  setup_dev.py  stop-backend.sh
tests/: test_rtsp.sh
tests/backend/: conftest.py  test_api.py  test_integration.py  test_services.py  test_websocket.py
